<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddItemActivity">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/t_tulo"
        android:inputType="text"/>

    <Spinner
        android:id="@+id/spinnerBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/car_brands" />

    <EditText
        android:id="@+id/editTextModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/modelo"
        android:inputType="text"/>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
